fixed some spacing, made home links disappear

--- a/src/client/utils/_style-mixins.scss
+++ b/src/client/utils/_style-mixins.scss
@@ -126,6 +126,10 @@
       padding: 11px 5px;
       cursor: pointer;
 
+      &:not(:first-child) {
+        margin-left: 3.11px;
+      }
+
       &.panic:after { content: 'Reset (in case of bug)'; }
       &.help:after { content: 'Google Groups'; }
       &.github:after { content: 'Project GitHub'; }
